# dify-agentbox

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile.j2  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: build.yml  style.yml
agentbox_build/: __init__.py  config.py  renderer.py
dev/: reformat
scripts/: 01-install-system-packages.sh  02-install-languages.sh  03-install-python-packages.sh  04-install-nodejs-packages.sh  05-create-user.sh  06-configure-root.sh  07-configure-user.sh
test/: test.html
test/resources/: test_playwright.py
versions/: versions.yaml
