[project]
name = "dify-agentbox"
version = "1.0.0"
description = "All-in-one Docker image with comprehensive programming language support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dify AgentBox Contributors" }
]
keywords = ["docker", "development", "agentbox", "multi-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.urls]
Homepage = "https://github.com/langgenius/dify-agentbox"
Repository = "https://github.com/langgenius/dify-agentbox"
Issues = "https://github.com/langgenius/dify-agentbox/issues"

[project.scripts]
agentbox-build = "build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
